# memento

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.github/agents/: ui-ux-modernizer.agent.md
experimentations/: evaluate_use_cases_with_judge.py  memento_expected_behavior.md  memento_use_cases.json  memento_use_cases_natural_language.md  patient_snapshot.json  poc_test_cases.json  streamlit_runtime_app.py  streamlit_tts_app.py  streamlit_whisper_app.py  use_case_eval_report.md  use_case_eval_results.jsonl  use_case_eval_traces.json
frontend/runtime-react/: index.html  package-lock.json  package.json
frontend/runtime-react/src/: App.jsx  styles.css
frontend/vitrine/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/vitrine/src/: App.tsx  index.css
frontend/vitrine/src/components/: AlertFeed.tsx  MemoryGraph.tsx  OrganicSphere.tsx
frontend/vitrine/src/data/: mockData.ts
src/memento/: __init__.py  todo.py
src/memento/audio/: README.md  __init__.py  live.py  models.py  transcription.py  vad.py
src/memento/audio/stt/: __init__.py  capture.py  io.py  live.py  transcription.py
src/memento/audio/tts/: __init__.py  playback.py  synthesis.py  voice.py
src/memento/conversation/: __init__.py  backends.py  generation.py  orchestrator.py
src/memento/memory/: README.md  __init__.py  adaptive.py  emotion.py  graph.py  graph_store.py  ingestion.py  integrations.py  integrity.py  interfaces.py  models.py  recall.py  reorientation.py  semantic.py  sync.py  sync_engine.py  sync_types.py  temporal.py  transaction_log.py  weighting.py
src/memento/runtime/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  models.py  observability.py  service.py  web.py
tests/: memory_fixtures.py  test_capture.py  test_conversation.py  test_conversation_backends.py  test_io.py  test_live.py  test_memory_graph.py  test_memory_integrations.py  test_memory_protocols.py  test_memory_semantic.py  test_memory_sync.py  test_package_imports.py  test_playback.py  test_runtime.py  test_todo.py  test_transcription.py  test_tts.py  test_vad.py  test_voice.py
