[project]
name = "memento"
version = "0.1.0"
description = "Prototype d'assistant vocal memoire pour patients atteints de la maladie d'Alzheimer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.0",
    "pillow<12",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
