[project]
name = "memento"
version = "0.1.0"
description = "Prototype d'assistant vocal memoire pour patients atteints de la maladie d'Alzheimer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=2.0.0",
    "openai-whisper>=20250625",
    "pillow<12",
    "sounddevice>=0.5.2",
    "streamlit>=1.55.0",
    "torch==2.11.0",
]

[project.optional-dependencies]
memory-backends = [
    "chromadb>=1.0.8",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "neo4j>=5.28.2",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
